@@ -40,15 +40,29 @@ dnl Check for HAL
 PKG_CHECK_MODULES(HAL, hal)
 
 dnl Check for override of default hal addon dir
-AC_MSG_CHECKING([hal addon dir ...])
+AC_MSG_CHECKING([hal addon dir])
 AC_ARG_WITH(hal-addon-dir, [  --with-hal-addon-dir=PATH     Location of the hal addon scripts.],
             with_hal_addon_dir="$withval", with_hal_addon_dir="no")
 if test "x${with_hal_addon_dir}" = "xno"; then
     hal_addon_dir="`pkg-config --variable=libdir hal`/hal"
+
+    hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
+    if test $? -ne 0
+    then
+        AC_MSG_ERROR([Automatically determined hal script location ${hal_addon_dir} not in allowed paths, use --with-hal-addon-dir])
+    fi
+    AC_MSG_RESULT([$hal_addon_dir])
 else
     hal_addon_dir="$with_hal_addon_dir"
+
+    hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
+    if test $? -ne 0
+    then
+        AC_MSG_WARN([Specified hal script location ${hal_addon_dir} not in allowed paths])
+    else
+        AC_MSG_RESULT([$hal_addon_dir])
+    fi
 fi
-AC_MSG_RESULT([$hal_addon_dir])
 AC_SUBST(hal_addon_dir)
 
 
